# video_journal_be

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/skills/architect/: SKILL.md
.claude/skills/code-reviewer/: SKILL.md
.claude/skills/dependency-upgrade/: SKILL.md
.claude/skills/documentation/: SKILL.md
.claude/skills/eng-team-orchestrator/: SKILL.md
.claude/skills/linear-implementation-build/: SKILL.md
.claude/skills/linear-implementation-plan/: SKILL.md
.claude/skills/merge/: SKILL.md
.claude/skills/performance-reviewer/: SKILL.md
.claude/skills/release-prep/: SKILL.md
.claude/skills/requirements-analyst/: SKILL.md
.claude/skills/test-runner-qa/: SKILL.md
alembic/: env.py
alembic/versions/: 00256d0c5bc3_initial_schema.py  1c5f5dfd0769_create_soundtracks_table.py  46946a54cc08_add_compilations_duration_s.py  730bc015c129_add_compilations_mix_clip_audio.py  81950cc83b79_add_clips_recorded_at_and_sort_index_.py  8e8cb7d9c562_add_compilations_tables.py  b72d1bfd6187_create_clips_table.py  c031cad72484_add_clips_error_message.py
docs/: architecture.md  code-design.md  code-style.md  configuration.md  data-models.md  database-migrations.md  implementation-workflow.md  logging.md  operations.md  planning-reviews.md  planning-workflow.md  testing.md
src/app/: main.py
src/app/api/: router.py
src/app/common/: exceptions.py  media_response.py  repository.py
src/app/core/: config.py  exception_handlers.py  lifespan.py  logging.py  middleware.py
src/app/db/: base.py  migrations.py  session.py
tests/: conftest.py
tests/common/: test_media_response.py
tests/db/: test_sqlite_pragmas.py
tests/media/: test_compile.py  test_ffmpeg.py  test_ffmpeg_progress.py  test_ffprobe.py  test_filmstrip.py  test_normalize.py
tests/storage/: test_local_storage.py
(+56 files in other folders)
